# z64c

./: .gitignore  Cargo.toml  LICENSE  README.md  dev-requirements.txt  example.z64  example.zx64  setup.cfg  source.z64c
.github/workflows/: python-package.yml
tests/: ast.py  test_lexer.py  test_main.py  test_parser.py  test_scanner.py  test_typechecker.py
z64c/: ast.py  codegen.py  lexer.py  main.py  parser.py  scanner.py  typechecker.py  types.py
zx64c/: ast.py  codegen.py  main.py  parser.py  scanner.py  typechecker.py  types.py
zx64c/typechecker/: __init__.py  errors.py
