[metadata]
name = z64c
author = khrynczenko
author_email = jeniopy@gmail.com
version = 0.0.0
license_file = LICENSE
description = A compiler/language targeting retro architectures.
long_description_content_type = text/markdown
long_description = file: README.md
url = http://github.com/khrynczenko/z64c
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
scripts = 
    bin/z64c.py
#install_requires =
    #scipy>=1.1.0, <2.0.0
    #numpy>=1.15.4, <2.0.0
    #compimg>=0.2.0, <0.3.0
    #opencv-python>=4.1.0, <5.0.0


[options.packages.find]
exclude =
    z64c.test
