[metadata]
name = zx64c
author = khrynczenko
author_email = jeniopy@gmail.com
version = 0.0.0
license_file = LICENSE
description = A compiler/language targeting retro architectures.
long_description_content_type = text/markdown
long_description = file: README.md
url = http://github.com/khrynczenko/z64c
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    zx64c = zx64c.main:main


[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
